<resources>
    <string name="app_name">MarketSpiral</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSICS</string>
    <string name="backdrop_subtitle">This season top 20 music</string>


    <string name="nav_categories">Categories</string>
    <string name="nav_beverages"> Beverages</string>
    <string name="nav_bread_bakery">Bread and Bakery</string>
    <string name="nav_canned_jarred">Canned/Jarred Goods</string>
    <string name="nav_cleaners">Cleaners</string>
    <string name="nav_dairy">Dairy</string>
    <string name="nav_baking">Dry/Baking Goods</string>
    <string name="nav_frozen">Frozen foods</string>
    <string name="nav_meat">Meat</string>
    <string name="nav_produce">produce</string>
    <string name="nav_paper">Paper Good</string>
    <string name="nav_personal_care">Personal Care</string>
    <string name="nav_other">other</string>

    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_title">Marketspiral</string>
    <string name="nav_subtitle">let\'s shope together!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


    <string name="loc_dialog_title">Use Location?</string>
    <string name="loc_dialog_message">wants to change your device settings:
                             inorder to provide offers around your location,location setting must be enabled</string>
    <string name="loc_dialog_positive_btn">Open Location Settings</string>
    <string name="loc_retrive_failed">Location retrive failed</string>


    <string name="Bedroom">Bedroom</string>
    <string name="map_list_header_txt">Location</string>
    <string name="hint">Loc</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="exchangeType">€</string>
    <string name="no_min">No min</string>
    <string name="no_max">No Max</string>
    <string name="no_loc_obtained">Location not obtained</string>
    <string name="select_loc_first">Please Select Location First</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="added_on">Added On</string>


    <string name="facebook_app_id">291954481255010</string>
    <string name="fb_login_protocol_scheme">fb291954481255010</string>
    <string name="logout">Logout</string>
    <string name="villa">Villa</string>
    <string name="residential">Residential</string>
    <string name="commercial">Commercial</string>
    <string name="action_add_item">Add item</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="add_item">Add item</string>
    <string name="action_my_items">My Homes</string>
    <string name="add_home">Add Home</string>
    <string name="sattelite">Sattelite </string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="none">None</string>
</resources>
