<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_normal"
        android:orderInCategory="100"
        android:title="@string/normal"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sattelite"
        android:orderInCategory="100"
        android:title="@string/sattelite"
        app:showAsAction="never" />
    <item
    android:id="@+id/action_hybrid"
    android:orderInCategory="100"
    android:title="@string/hybrid"
    app:showAsAction="never" />
    <item
        android:id="@+id/action_terrain"
        android:orderInCategory="100"
        android:title="@string/terrain"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_none"
        android:orderInCategory="100"
        android:title="@string/none"
        app:showAsAction="never" />

</menu>
